hphp/hack/test/dynamic_view/test_basic.php
<?hh // partial
function foo()  {
  $x = " hello ";
  return 5;
}


function test() : (int, int) {
  // partial class
  $x = foo();
  /* HH_IGNORE_ERROR[2049] */ hh_show($x);
  return $x;
}
